# AMQPTests

./: README.md
1_helloworld/: AMQPHandler.cpp  AMQPHandler.h  CMakeLists.txt  helloworld.cpp  run.sh  runfirst.sh
2_taskworker/: CMakeLists.txt  run.sh  runfirst.sh  taskworker.cpp
3_publish-subscribe/: CMakeLists.txt  conanfile.txt  publish-subscribe.cpp  run.sh  runfirst.sh
HelloAMQP/: CMakeLists.txt  hello.cpp  run.sh
